test/ddc-spec/error/01-ErrorExp/01-ExportUndefined/Test.ds

-- ISSUE #408: No source locations for import and export errors.
module Test
export foo
where

